// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the generated crud routes Create one 1`] = `
Object {
  "createdAt": Any<Date>,
  "id": 14,
  "name": "New Role",
  "post_create": 0,
  "post_delete": 0,
  "post_read": 0,
  "post_update": 0,
  "role_create": 0,
  "role_delete": 0,
  "role_read": 0,
  "role_update": 0,
  "updatedAt": null,
  "user_create": 0,
  "user_delete": 0,
  "user_read": 0,
  "user_update": 0,
}
`;

exports[`Test the generated crud routes Get filtered list 1`] = `
Object {
  "createdAt": Any<String>,
  "id": 13,
  "name": "nameB",
  "post_create": 0,
  "post_delete": 0,
  "post_read": 0,
  "post_update": 0,
  "role_create": 0,
  "role_delete": 0,
  "role_read": 0,
  "role_update": 0,
  "updatedAt": null,
  "user_create": 0,
  "user_delete": 0,
  "user_read": 0,
  "user_update": 0,
}
`;

exports[`Test the generated crud routes Get filtered list 2`] = `
Object {
  "count": 1,
}
`;

exports[`Test the generated crud routes Get list 1`] = `
Object {
  "createdAt": Any<String>,
  "id": 13,
  "name": "nameB",
  "post_create": 0,
  "post_delete": 0,
  "post_read": 0,
  "post_update": 0,
  "role_create": 0,
  "role_delete": 0,
  "role_read": 0,
  "role_update": 0,
  "updatedAt": null,
  "user_create": 0,
  "user_delete": 0,
  "user_read": 0,
  "user_update": 0,
}
`;

exports[`Test the generated crud routes Get list 2`] = `
Object {
  "count": 2,
  "next": "https://www.example.org/crud/role/?sort=%7B%22field%22%3A%22id%22%2C%22order%22%3A%22desc%22%7D&filter=%7B%22id%22%3A%5B11%2C13%5D%7D&range=%5B1%2C2%5D",
}
`;

exports[`Test the generated crud routes Get one 1`] = `
Object {
  "createdAt": Any<String>,
  "id": 12,
  "name": "nameA",
  "post_create": 0,
  "post_delete": 0,
  "post_read": 0,
  "post_update": 0,
  "role_create": 0,
  "role_delete": 0,
  "role_read": 0,
  "role_update": 0,
  "updatedAt": null,
  "user_create": 0,
  "user_delete": 0,
  "user_read": 0,
  "user_update": 0,
}
`;

exports[`Test the generated crud routes Get one with relations 1`] = `
Object {
  "createdAt": Any<String>,
  "id": 100,
  "loggedInAt": null,
  "role": Object {
    "createdAt": Any<String>,
    "id": 10,
    "name": "nameC",
    "post_create": 0,
    "post_delete": 0,
    "post_read": 0,
    "post_update": 0,
    "role_create": 0,
    "role_delete": 0,
    "role_read": 0,
    "role_update": 0,
    "updatedAt": null,
    "user_create": 0,
    "user_delete": 0,
    "user_read": 0,
    "user_update": 0,
  },
  "roleId": 10,
  "session": Array [],
  "updatedAt": null,
  "username": "Relation User",
}
`;

exports[`Test the generated crud routes Get relation 1`] = `
Object {
  "createdAt": Any<String>,
  "id": 100,
  "loggedInAt": null,
  "roleId": 10,
  "updatedAt": null,
  "username": "Relation User",
}
`;

exports[`Test the generated crud routes Update one 1`] = `
Object {
  "createdAt": Any<Date>,
  "id": 10,
  "name": "New Name",
  "post_create": 0,
  "post_delete": 0,
  "post_read": 0,
  "post_update": 0,
  "role_create": 0,
  "role_delete": 0,
  "role_read": 0,
  "role_update": 0,
  "updatedAt": Any<Date>,
  "user_create": 0,
  "user_delete": 0,
  "user_read": 0,
  "user_update": 0,
}
`;

exports[`Test the generated crud routes Update one with relations 1`] = `
Object {
  "createdAt": Any<String>,
  "id": 10,
  "name": "New Name",
  "post_create": 0,
  "post_delete": 0,
  "post_read": 0,
  "post_update": 0,
  "role_create": 0,
  "role_delete": 0,
  "role_read": 0,
  "role_update": 0,
  "updatedAt": Any<String>,
  "user": Array [
    Object {
      "createdAt": Any<String>,
      "id": 100,
      "loggedInAt": null,
      "roleId": 10,
      "updatedAt": Any<String>,
      "username": "New UserName",
    },
  ],
  "user_create": 0,
  "user_delete": 0,
  "user_read": 0,
  "user_update": 0,
}
`;
